# proto-dprint-plugin

./: .prototools  CHANGELOG.md  Cargo.toml  README.md
src/: proto.rs
tests/: download_test.rs  shims_test.rs  versions_test.rs
